# JS-SVG-Client

./: .gitignore  ACKNOWLEDGEMENT.md  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE.md  README.md  RELEASES.md  SPONSORS.md  faqs-aaabbbcom-20251027-data-dolphin-faqs.tex  jest.config.mjs  package-lock.json  package.json  webpack.config.js  webpack.config.web.js  webpackOldA.config.js
.github/: FUNDING.yml
data/: Book1.xlsx
doc/: DOCUMENTATION.md  doc-time-series-forecasting.md  gauge.md  user-guide-dolphin.md
doc/Examples/data-certificates/excel2tex/: __init__.py  pyproject.toml
doc/Examples/data-certificates/excel2tex/src/: CreateTexFromExcel.py  ExcelToTexArticle.py  ExcelToTexCertificate.py  Utility.py  __init__.py
scripts/: cleanup.py  cleanup.sh  colors.py  colors.sh  keepFiles.txt  server.bat  traffic.py
src/: Animate.js  AnimateMotion.js  AnimateSet.js  AnimateTransform.js  Circle.js  ClipPath.js  Defs.js  Div.js  Ellipse.js  FeBlend.js  FeDropShadow.js  FeGaussianBlur.js  FeOffset.js  Filter.js  GradientStop.js  Grid.js  Group.js  Html.js  Image.js  Line.js  LinearGradient.js  Link.js  Marker.js  Mask.js  Path.js  Pattern.js  Polygon.js  Polyline.js  RadialGradient.js  Rectangle.js  Svg.js  SvgParent.js  Text.js  TextPath-nnn.js  TextPath.js  Triangle.js  Use.js  index.js
test/: index.html  indexWebPack.html  main.css  main.js  mainCircle.js  mainHtml.js  mainTest.js
views/: certificate.hbs  certificateMany.hbs  faq.hbs  invoice.hbs  pub-business-card-pdf.hbs  pub-business-card.hbs  report.hbs  test-data-passing.hbs
(+322 files in other folders)
